sim_seq/output_tb_gen_tb_20250408/94/make_output.log
verilator -cc --exe -x-assign fast -Wall --assert --coverage-line -Wno-WIDTHEXPAND -Wno-BLKSEQ -Wno-VARHIDDEN -Wno-WIDTHTRUNC -Wno-UNUSEDSIGNAL -f input.vc top_module.v sim-main.cpp rfuzz-harness.cpp
- V e r i l a t i o n   R e p o r t: Verilator 5.032 2025-01-01 rev UNKNOWN.REV
- Verilator: Built from 0.000 MB sources in 0 modules, into 0.000 MB in 0 C++ files needing 0.000 MB
- Verilator: Walltime 0.001 s (elab=0.000, cvt=0.000, bld=0.000); cpu 0.001 s on 1 threads
cd obj_dir && make -f Vtop_module.mk
c++  -I.  -MMD -I/opt/homebrew/Cellar/verilator/5.032/share/verilator/include -I/opt/homebrew/Cellar/verilator/5.032/share/verilator/include/vltstd -DVM_COVERAGE=1 -DVM_SC=0 -DVM_TIMING=0 -DVM_TRACE=0 -DVM_TRACE_FST=0 -DVM_TRACE_VCD=0 -faligned-new -fbracket-depth=4096 -fcf-protection=none -Qunused-arguments -Wno-bool-operation -Wno-c++11-narrowing -Wno-constant-logical-operand -Wno-non-pod-varargs -Wno-parentheses-equality -Wno-shadow -Wno-sign-compare -Wno-tautological-bitwise-compare -Wno-tautological-compare -Wno-uninitialized -Wno-unused-but-set-parameter -Wno-unused-but-set-variable -Wno-unused-parameter -Wno-unused-variable     -std=gnu++17 -Os  -c -o rfuzz-harness.o ../rfuzz-harness.cpp
../rfuzz-harness.cpp:20:14: error: no member named 'q' in 'Vtop_module'
   20 |         top->q = 0x0;
      |         ~~~  ^
../rfuzz-harness.cpp:29:18: error: no member named 'q' in 'Vtop_module'
   29 |         if (top->q != 0x1) {
      |             ~~~  ^
../rfuzz-harness.cpp:34:98: error: no member named 'q' in 'Vtop_module'
   34 |             printf("At %d clock cycle of %d, top->%s = 0x%x, expected = 0x%x\n", 0,12, "q", top->q, 0x1);
      |                                                                                             ~~~  ^
../rfuzz-harness.cpp:43:18: error: no member named 'q' in 'Vtop_module'
   43 |         if (top->q != 0x2) {
      |             ~~~  ^
../rfuzz-harness.cpp:48:98: error: no member named 'q' in 'Vtop_module'
   48 |             printf("At %d clock cycle of %d, top->%s = 0x%x, expected = 0x%x\n", 1,12, "q", top->q, 0x2);
      |                                                                                             ~~~  ^
../rfuzz-harness.cpp:57:18: error: no member named 'q' in 'Vtop_module'
   57 |         if (top->q != 0x3) {
      |             ~~~  ^
../rfuzz-harness.cpp:62:98: error: no member named 'q' in 'Vtop_module'
   62 |             printf("At %d clock cycle of %d, top->%s = 0x%x, expected = 0x%x\n", 2,12, "q", top->q, 0x3);
      |                                                                                             ~~~  ^
../rfuzz-harness.cpp:71:18: error: no member named 'q' in 'Vtop_module'
   71 |         if (top->q != 0x4) {
      |             ~~~  ^
../rfuzz-harness.cpp:76:98: error: no member named 'q' in 'Vtop_module'
   76 |             printf("At %d clock cycle of %d, top->%s = 0x%x, expected = 0x%x\n", 3,12, "q", top->q, 0x4);
      |                                                                                             ~~~  ^
../rfuzz-harness.cpp:85:18: error: no member named 'q' in 'Vtop_module'
   85 |         if (top->q != 0x5) {
      |             ~~~  ^
../rfuzz-harness.cpp:90:98: error: no member named 'q' in 'Vtop_module'
   90 |             printf("At %d clock cycle of %d, top->%s = 0x%x, expected = 0x%x\n", 4,12, "q", top->q, 0x5);
      |                                                                                             ~~~  ^
../rfuzz-harness.cpp:99:18: error: no member named 'q' in 'Vtop_module'
   99 |         if (top->q != 0x6) {
      |             ~~~  ^
../rfuzz-harness.cpp:104:98: error: no member named 'q' in 'Vtop_module'
  104 |             printf("At %d clock cycle of %d, top->%s = 0x%x, expected = 0x%x\n", 5,12, "q", top->q, 0x6);
      |                                                                                             ~~~  ^
../rfuzz-harness.cpp:113:18: error: no member named 'q' in 'Vtop_module'
  113 |         if (top->q != 0x7) {
      |             ~~~  ^
../rfuzz-harness.cpp:118:98: error: no member named 'q' in 'Vtop_module'
  118 |             printf("At %d clock cycle of %d, top->%s = 0x%x, expected = 0x%x\n", 6,12, "q", top->q, 0x7);
      |                                                                                             ~~~  ^
../rfuzz-harness.cpp:127:18: error: no member named 'q' in 'Vtop_module'
  127 |         if (top->q != 0x8) {
      |             ~~~  ^
../rfuzz-harness.cpp:132:98: error: no member named 'q' in 'Vtop_module'
  132 |             printf("At %d clock cycle of %d, top->%s = 0x%x, expected = 0x%x\n", 7,12, "q", top->q, 0x8);
      |                                                                                             ~~~  ^
../rfuzz-harness.cpp:141:18: error: no member named 'q' in 'Vtop_module'
  141 |         if (top->q != 0x9) {
      |             ~~~  ^
../rfuzz-harness.cpp:146:98: error: no member named 'q' in 'Vtop_module'
  146 |             printf("At %d clock cycle of %d, top->%s = 0x%x, expected = 0x%x\n", 8,12, "q", top->q, 0x9);
      |                                                                                             ~~~  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make[1]: *** [rfuzz-harness.o] Error 1
make: *** [run] Error 2
